--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ select:focus {
   height: 40vh;
   min-height: 260px;
   background-image: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35));
+  background: url(budget-calc2.jpg);
   background-size: cover;
   background-position: center;
   position: relative;
@@ -144,10 +145,12 @@ select:focus {
 .add {
   padding: 14px;
   border-bottom: 1px solid #e7e7e7;
-  background-color: #f7f7f7;
+  background-color: #efefef;
 }
 
 .add__container {
+  display: flex;
+  justify-content: center;
   margin: 0 auto;
   text-align: center;
 }
@@ -214,24 +217,18 @@ select:focus {
 
 /***** LISTS *****/
 .container {
-  width: 1000px;
-  margin: 60px auto;
+  display: flex;
+  align-items: normal;
+  margin: 40px auto;
 }
 
-.income {
-  float: left;
-  width: 475px;
-  margin-right: 50px;
-}
+.income {}
 
 .income__list {
   margin-bottom: 20px;
 }
 
-.expenses {
-  float: left;
-  width: 475px;
-}
+.expenses {}
 
 h2 {
   text-transform: uppercase;
@@ -241,10 +238,12 @@ h2 {
 }
 
 .icome__title {
+  text-align: center;
   color: #28B9B5;
 }
 
 .expenses__title {
+  text-align: center;
   color: #FF5049;
 }
 
@@ -354,8 +353,52 @@ h2 {
 */
 }
 
-.morda {}
-
 .first-circle {
   fill: forestgreen;
+}
+
+@media only screen and (max-width: 768px) {
+  .container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .add__container {
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .typeDesc {
+    margin-bottom: 10px;
+  }
+}
+
+@media only screen and (max-width: 508px) {
+  .add__description {
+    width: 320px;
+  }
+}
+
+@media only screen and (max-width: 429px) {
+  .add__description {
+    width: 280px;
+  }
+}
+
+@media only screen and (max-width: 389px) {
+  .add__description {
+    width: 195px;
+  }
+}
+
+@media only screen and (min-width: 576px) {
+  .container {
+    max-width: 630px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .container {
+    max-width: 100%;
+  }
 }
